<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.6</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<groupId>br.com.l2</groupId>
	<artifactId>packaging</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>packaging</name>
	<description>Projeto L2</description>

	<properties>
		<java.version>21</java.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.30</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>io.swagger.core.v3</groupId>
			<artifactId>swagger-core</artifactId>
			<version>2.2.20</version>
		</dependency>

		<dependency>
			<groupId>org.openapitools</groupId>
			<artifactId>jackson-databind-nullable</artifactId>
			<version>0.2.6</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.openapitools</groupId>
				<artifactId>openapi-generator-maven-plugin</artifactId>
				<version>7.10.0</version>
				<executions>
					<execution>
						<id>l2-packaging</id>
						<goals>
							<goal>generate</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<inputSpec>${project.basedir}/src/main/resources/openapi/OpenAPI.yaml</inputSpec>
					<generatorName>spring</generatorName>
					<configOptions>
						<sourceFolder>src/main/java</sourceFolder>
						<modelPackage>br.com.l2.packaging.model</modelPackage>
						<apiPackage>br.com.l2.packaging.api</apiPackage>
						<useJakartaEe>true</useJakartaEe>
						<useSpringBoo3>true</useSpringBoo3>
						<generateSupportingFiles>false</generateSupportingFiles>
						<sourceFolder>gen</sourceFolder>
						<interfaceOnly>true</interfaceOnly>
						<skipDefaultInterface>true</skipDefaultInterface>
						<java8>true</java8>
						<dateLibrary>java8-localdatetime</dateLibrary>
						<serializableModel>true</serializableModel>
						<useNullable>false</useNullable>
					</configOptions>
					<output>${project.build.directory}/generated-sources</output>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
